--- a/vignettes/ProFuse-Multi-Images.Rmd
+++ b/vignettes/ProFuse-Multi-Images.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 Load our useful libraries:
 
 ```{r}
+library(ProFit)
 library(ProFuse)
 library(ProFound)
 library(magicaxis)
@@ -29,7 +30,7 @@ library(Rfits)
 Set global evaluate (basically TRUE for GitHub version and FALSE for CRAN):
 
 ```{r}
-evalglobal = FALSE
+evalglobal = TRUE
 ```
 
 ## Fitting Simple Offset Images
@@ -128,7 +129,7 @@ Now we have done things the harder semi-manual way, you will be relieved to hear
 ```{r eval=evalglobal}
 F2F = profuseMultiImageFound2Fit(image_list = list(im1, im2), loc=c(450,500), cutbox=600,
         offset_list = list(c(0,0), c(-23.112,-9.697)), magzero = 30,
-        psf_list=list(F2F[[1]]$psf, F2F[[2]]$psf), roughpedestal=T, tolerance=10)
+        psf_list=list(PSF1$psf, PSF2$psf), roughpedestal=T, tolerance=10)
 ```
 
 The caveat is we lose some of the finer control possible setting things up more explicitly, but **profuseMultiImageFound2Fit** covers most use-cases in practice.
